# GFX_Lab1

./: CMakeLists.txt  README.md
libs/glad/include/glad/: glad.h
sources/: Line.cpp  Line.h  LineCollection.cpp  LineCollection.h  MyApp.cpp  PointCollection.cpp  PointCollection.h  framework.cpp  framework.h  lodepng.cpp  lodepng.h
